@@ -5,6 +5,8 @@
 * Client: Refactored peers DB management and handling of "addr" messages, added address flood protection
 * Package "lib/others/peersdb" moved to "client/network/peersdb"
 * Client/WebUI/Miners: Shows strings inside conbase tx for mined blocks
+* Client: Ignore "cmpctblock" messages when chain not in sync
+* Client: Do not connect to friends in single connection mode
 
 1.9.9 - 2021-05-21
  * Client: Do not drop Authorized peers
